--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "ag-grid-react": "^35.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.0"
+    "react-router-dom": "^7.1.0",
+    "react-simple-maps": "^3.0.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/react-simple-maps": "^3.0.6",
     "@vitejs/plugin-react": "^4.3.0",
     "vite": "^6.0.0"
   }
